speech/stt_kube/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm-watson-stt-embed
  labels:
    app.kubernetes.io/name: "ibm-watson-stt-embed"
    app.kubernetes.io/component: "runtime"
    app.kubernetes.io/instance: "example"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "ibm-watson-stt-embed"
      app.kubernetes.io/component: "runtime"
      app.kubernetes.io/instance: "example"
  progressDeadlineSeconds: 1800
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "ibm-watson-stt-embed"
        app.kubernetes.io/component: "runtime"
        app.kubernetes.io/instance: "example"
    spec:
      imagePullSecrets:
      - name: ibm-entitlement-key
      containers:
      - name: runtime
        image: lab-registry-quay-openshift-operators.apps.ocp.lab.home/watson-libs/watson-stt-runtime:1.0.0
        resources:
          limits:
            cpu: 4
            ephemeral-storage: 1Gi
            memory: 4Gi
          requests:
            cpu: 1
            ephemeral-storage: 1Gi
            memory: 4Gi
        ports:
        - containerPort: 1080
        startupProbe:
          tcpSocket:
            port: 1080
          failureThreshold: 12
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /v1/miniHealthCheck
            port: 1080
          periodSeconds: 10
          timeoutSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 1080
          periodSeconds: 30
        volumeMounts:
        - mountPath: /opt/ibm/chuck.x86_64/var
          name: chuck-var
        - mountPath: /opt/ibm/chuck.x86_64/logs
          name: chuck-logs
        - name: tmp
          mountPath: /tmp
        - mountPath: /opt/ibm/chuck.x86_64/var/env_config.json
          name: config
          subPath: env_config.json
        - mountPath: /opt/ibm/chuck.x86_64/var/sessionPools.yaml
          name: config
          subPath: sessionPools.yaml
        - mountPath: /opt/ibm/chuck.x86_64/var/sessionPools.py
          name: config
          subPath: sessionPools.py
        - mountPath: /opt/ibm/chuck.x86_64/var/resourceRequirements.py
          name: config
          subPath: resourceRequirements.py
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sleep
              - "15"
      volumes:
        - name: chuck-var
          emptyDir: {}
        - name: chuck-cache
          emptyDir: {}
        - name: chuck-logs
          emptyDir: {}
        - name: models
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: config
          configMap:
            name: ibm-watson-stt-embed
