speech/stt_kube/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stt-embed
spec:
  to:
    kind: Service
    name: ibm-watson-stt-embed
    weight: 100
  port:
    targetPort: runtime
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
